src/main/java/com/example/payment/errors/ErrorResponse.java
package com.example.payment.errors;

import com.fasterxml.jackson.databind.ObjectMapper;
import lombok.Builder;
import lombok.Data;
import lombok.SneakyThrows;

import java.util.List;

@Data
@Builder
public class ErrorResponse {

    private String title;
    private List<String> reasons;

    @SneakyThrows
    @Override
    public String toString() {
        ObjectMapper mapper = new ObjectMapper();
        return mapper.writeValueAsString(this);
    }
}
